website structure ready

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
-layout: default
 title: Home
 ---
 
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>Welcome to my website!</h1>
+
+<p>On this website, I will post machine learning topics (theory and practice) as well as statistics topics.</p>
+
+<p>Have fun!</p>
