change intro message

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Home
 
 <h1>Welcome to my website!</h1>
 
-<p>On this website, I will post machine learning topics (theory and practice) as well as statistics topics.</p>
+<p>On this website, I will post machine learning / statistics theory, personal projects as well as few extra topics.</p>
 
 <p>Have fun!</p>
