add credit risk project

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@ title: Projects
 
 <p><a href="https://github.com/savoga/various_projects/tree/master/MapReduce">MapReduce from scratch</a></p>
 
+<p>Credit risk prediction</p>
+
 <p>Geolocalisation</p>
 
 <p>Movie recommendation</p>
