--- a/machinelearning.html
+++ b/machinelearning.html
@@ -16,3 +16,14 @@ title: Machine Learning
     {% endfor %}
 </u>
 {% endfor %}
+
+<br><br>
+
+Sources:
+<br>
+- <a href="https://www.cs.huji.ac.il/~shais/UnderstandingMachineLearning/understanding-machine-learning-theory-algorithms.pdf">
+    Understanding Machine Learning: From Theory to Algorithms</a>, Shai Shalev-Shwartz and Shai Ben-David
+<br>
+- Télécom Paris courses
+<br>
+- <a href="https://www.coursera.org/specializations/deep-learning">Deep learning classes</a>, Andrew Ng
