add local outlier factor

--- a/machinelearning.html
+++ b/machinelearning.html
@@ -27,3 +27,5 @@ Sources:
 - Télécom Paris courses
 <br>
 - <a href="https://www.coursera.org/specializations/deep-learning">Deep learning classes</a>, Andrew Ng
+<br>
+- Wikipedia
